--- a/_data/navigation_list.yml
+++ b/_data/navigation_list.yml
@@ -35,16 +35,16 @@ kienthuc:
     url: /kien-thuc/
     subfolderitems:
       - page: Hệ mặt trời
-        url: /he-mat-troi/
+        url: /kien-thuc/he-mat-troi/
         image: he-mat-troi.gif
       - page: Ngôi sao
-        url: /ngoi-sao/
+        url: /kien-thuc/ngoi-sao/
         image: ngoi-sao.gif
       - page: Thiên hà
-        url: /thien-ha/
+        url: /kien-thuc/thien-ha/
         image: thien-ha.gif
       - page: Tinh vân
-        url: /tinh-van/
+        url: /kien-thuc/tinh-van/
         image: tinh-van.gif
 tintuc:
   - title: Tin tức
