--- a/_data/calendar_image.yml
+++ b/_data/calendar_image.yml
@@ -1,69 +1,69 @@
 calendar_image:
   - 0:
-    properties: dong-chi-o-ban-cau-bac.jpg
+    properties: dong-chi-o-ban-cau-bac.webp
   - 1:
-    properties: ha-chi-o-ban-cau-bac.jpg
+    properties: ha-chi-o-ban-cau-bac.webp
   - 2:
-    properties: mua-sao-bang-anh-tien.jpg
+    properties: mua-sao-bang-anh-tien.webp
   - 3:
-    properties: mua-sao-bang-eta-aquarid.jpg
+    properties: mua-sao-bang-eta-aquarid.webp
   - 4:
-    properties: mua-sao-bang-kim-nguu.jpg
+    properties: mua-sao-bang-kim-nguu.webp
   - 5:
-    properties: mua-sao-bang-lap-ho.jpg
+    properties: mua-sao-bang-lap-ho.webp
   - 6:
-    properties: mua-sao-bang-song-tu.jpg
+    properties: mua-sao-bang-song-tu.webp
   - 7:
-    properties: mua-sao-bang-su-tu.jpg
+    properties: mua-sao-bang-su-tu.webp
   - 8:
-    properties: mua-sao-bang-thien-cam.jpg
+    properties: mua-sao-bang-thien-cam.webp
   - 9:
-    properties: mua-sao-bang-thien-long.jpg
+    properties: mua-sao-bang-thien-long.webp
   - 10:
-    properties: mua-sao-bang-thuoc-phan-tu.jpg
+    properties: mua-sao-bang-thuoc-phan-tu.webp
   - 11:
-    properties: mua-sao-bang-tieu-hung.jpg
+    properties: mua-sao-bang-tieu-hung.webp
   - 12:
-    properties: nguyet-thuc-mot-phan.jpg
+    properties: nguyet-thuc-mot-phan.webp
   - 13:
-    properties: nguyet-thuc-nua-toi.jpg
+    properties: nguyet-thuc-nua-toi.webp
   - 14:
-    properties: nguyet-thuc-toan-phan.jpg
+    properties: nguyet-thuc-toan-phan.webp
   - 15:
-    properties: nhat-thuc-hinh-khuyen.jpg
+    properties: nhat-thuc-hinh-khuyen.webp
   - 16:
-    properties: nhat-thuc-mot-phan.jpg
+    properties: nhat-thuc-mot-phan.webp
   - 17:
-    properties: nhat-thuc-toan-phan.jpg
+    properties: nhat-thuc-toan-phan.webp
   - 18:
-    properties: sao-hai-vuong-o-vi-tri-xung-doi.jpg
+    properties: sao-hai-vuong-o-vi-tri-xung-doi.webp
   - 19:
-    properties: sao-hoa-o-vi-tri-xung-doi.jpg
+    properties: sao-hoa-o-vi-tri-xung-doi.webp
   - 20:
-    properties: sao-kim-o-vi-tri-ly-giac-cuc-dai-phia-dong.jpg
+    properties: sao-kim-o-vi-tri-ly-giac-cuc-dai-phia-dong.webp
   - 21:
-    properties: sao-kim-o-vi-tri-ly-giac-cuc-dai-phia-tay.jpg
+    properties: sao-kim-o-vi-tri-ly-giac-cuc-dai-phia-tay.webp
   - 22:
-    properties: sao-moc-o-vi-tri-xung-doi.jpg
+    properties: sao-moc-o-vi-tri-xung-doi.webp
   - 23:
-    properties: sao-thien-vuong-o-vi-tri-xung-doi.jpg
+    properties: sao-thien-vuong-o-vi-tri-xung-doi.webp
   - 24:
-    properties: sao-tho-o-vi-tri-xung-doi.jpg
+    properties: sao-tho-o-vi-tri-xung-doi.webp
   - 25:
-    properties: sao-thuy-o-vi-tri-ly-giac-cuc-dai-phia-dong.jpg
+    properties: sao-thuy-o-vi-tri-ly-giac-cuc-dai-phia-dong.webp
   - 26:
-    properties: sao-thuy-o-vi-tri-ly-giac-cuc-dai-phia-tay.jpg
+    properties: sao-thuy-o-vi-tri-ly-giac-cuc-dai-phia-tay.webp
   - 27:
-    properties: su-giao-hoi-hiem-hoi-cua-sao-moc-va-sao-tho.jpg
+    properties: su-giao-hoi-hiem-hoi-cua-sao-moc-va-sao-tho.webp
   - 28:
-    properties: thu-phan-o-ban-cau-bac.jpg
+    properties: thu-phan-o-ban-cau-bac.webp
   - 29:
-    properties: trang-moi.jpg
+    properties: trang-moi.webp
   - 30:
-    properties: trang-tron.jpg
+    properties: trang-tron.webp
   - 31:
-    properties: trang-tron-sieu-trang.jpg
+    properties: trang-tron-sieu-trang.webp
   - 32:
-    properties: xuan-phan-o-ban-cau-bac.jpg
+    properties: xuan-phan-o-ban-cau-bac.webp
   - 33:
-    properties: mua-sao-bang-delta-aquarid.jpg
+    properties: mua-sao-bang-delta-aquarid.webp
