--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Trang Thiên Văn Học Việt Nam
-email: contact@thienvanhoc.vn
+email: contact@namgd.com
 description: >- # this means to ignore newlines until "baseurl:"
   Trang Thiên Văn Học Việt Nam.
 baseurl: "" # the subpath of your site, e.g. /blog
