Add plugin sitemap

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: Trang Thiên Văn Học Việt Nam
 email: contact@namgd.com
 description: >- # this means to ignore newlines until "baseurl:"
   Website hàng đầu về kiến thức thiên văn học, vũ trụ học, công nghệ vũ trụ, và thiên văn Việt Nam.
+logo: /images/logo.png
 keywords:
   [
     thiên văn học,
@@ -80,6 +81,7 @@ future: true
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
