--- a/_data/calendar_image.yml
+++ b/_data/calendar_image.yml
@@ -67,3 +67,7 @@ calendar_image:
     properties: xuan-phan-o-ban-cau-bac.webp
   - 33:
     properties: mua-sao-bang-delta-aquarid.webp
+  - 34:
+    properties: nhat-thuc-lai.webp
+  - 35:
+    properties: nguyet-thuc-nua-toi.webp
